--- a/TODO
+++ b/TODO
@@ -1,1 +1,7 @@
 * https://tanstack.com/query/v5/docs/eslint/eslint-plugin-query
+
+* Get Suspense and useSuspenseQuery working.
+
+* CI.
+
+* Don't render in status bar.
