--- a/TODO
+++ b/TODO
@@ -1,3 +1,8 @@
 * https://tanstack.com/query/v5/docs/eslint/eslint-plugin-query
 
-* Get Suspense and useSuspenseQuery working.
+* Get Suspense and useSuspenseQuery working properly.
+  - why is Suspense at top-level required?
+
+* eslint warnings aren't useful
+  - disable or turn into errors.
+  - or enable prettier?
