--- a/TODO
+++ b/TODO
@@ -1,3 +1,17 @@
+* The following packages should be updated for best compatibility with the installed expo version:
+
+  expo-status-bar@1.11.1 - expected version: ~2.0.1
+  jest@29.3.1 - expected version: ~29.7.0
+  react@18.2.0 - expected version: 18.3.1
+  react-native@0.73.4 - expected version: 0.76.6
+  react-native-safe-area-context@4.8.2 - expected version: 4.12.0
+  @babel/core@7.24.0 - expected version: ^7.25.2
+  @types/react@18.2.45 - expected version: ~18.3.12
+
+  Your project may not work correctly until you install the expected versions of the packages.
+
+* Set "newArchEnabled": true in your app.json.
+
 * eslint warnings aren't useful
   - disable or turn into errors.
   - or enable prettier?
