--- a/TODO
+++ b/TODO
@@ -1,3 +1,13 @@
+* WARNING: You are currently running a version of TypeScript which is not officially supported by @typescript-eslint/typescript-estree.
+
+  You may find that it works just fine, or you may not.
+
+  SUPPORTED TYPESCRIPT VERSIONS: >=4.3.5 <5.4.0
+
+  YOUR TYPESCRIPT VERSION: 5.4.2
+
+* Remaining upgrades.
+
 * eslint react-hooks/exhaustive-deps disabled.
 
 * Try out https://docs.expo.dev/guides/react-compiler/
