--- a/TODO
+++ b/TODO
@@ -1,3 +1,13 @@
+* Proper fingerprint implementation.
+
+* Test for native module.
+
+* More react native testing library tests.
+
+* How can app and module be imported into android studio?
+
+* Configure eas.
+
 * Expo prevents use of eslint 9: https://github.com/expo/expo/issues/28144. eslint 8 is no longer maintained.
 
 * eslint react-hooks/exhaustive-deps disabled.
