--- a/TODO
+++ b/TODO
@@ -15,3 +15,5 @@
 * Try out https://docs.expo.dev/guides/react-compiler/
 
 * Run expo-doctor on CI?
+
+* iOS implementation for fingerprintAuthorities.
