--- a/TODO
+++ b/TODO
@@ -6,6 +6,11 @@
 
 * More react native testing library tests.
 
+* End-to-end test
+  - https://docs.expo.dev/build-reference/e2e-tests/
+    - need to use legacy mode, so maybe not...
+  - https://github.com/marketplace/actions/android-emulator-runner?
+
 * Nicer refresh UI?
 
 * Expo prevents use of eslint 9: https://github.com/expo/expo/issues/28144. eslint 8 is no longer maintained.
