Add jest tests that ensure .node-version, runtime node version and eas.json (EAS Build) all agree on the node version.

--- a/TODO
+++ b/TODO
@@ -12,10 +12,6 @@
 
 * Nicer refresh UI?
 
-* Ensure that .node-version file and eas.json agree on node version.
-  - a jest unit test that parses eas.json
-  - contribute something to eas build that lets it parse .node-version?
-
 * dorny/test-reporter for android gradle test results.
 
 * Expo prevents use of eslint 9: https://github.com/expo/expo/issues/28144. eslint 8 is no longer maintained.
@@ -27,3 +23,5 @@
 * Run expo-doctor on CI?
 
 * iOS implementation for fingerprintAuthorities.
+
+* Contribute something to eas build that lets it parse .node-version so don't need to specify in eas.json?
