--- a/TODO
+++ b/TODO
@@ -11,6 +11,9 @@
 
 * dorny/test-reporter for android gradle test results.
 
+* Run eas build on github actions too?
+  - likely faster than using eas build directly.
+
 * Expo prevents use of eslint 9: https://github.com/expo/expo/issues/28144. eslint 8 is no longer maintained.
 
 * eslint react-hooks/exhaustive-deps disabled.
