--- a/TODO
+++ b/TODO
@@ -3,6 +3,8 @@
   - why didn't CI fail with this?
     - it runs tsc
 
+* Test pull to refresh works in Authorities.test.tsx.
+
 * Add a turbomodule too, to compare with the expo native module.
 
 * More react native testing library tests.
