--- a/TODO
+++ b/TODO
@@ -40,3 +40,6 @@
   - little point, since downloaded from GitHub release, so as fast as caching files.
 
 * reactivecircus/android-emulator-runner@v2 doesn't version emulator tool or AVD base image
+
+* Test on minSdkVersion=21
+  - https://github.com/mobile-dev-inc/maestro/issues/1207 prevented this
