--- a/TODO
+++ b/TODO
@@ -1,4 +1,8 @@
 * Run maestro tests on github actions for iOS.
+  - cache cocoapod files
+    - https://samwize.com/2023/05/24/speed-up-pods-and-gem-install-in-github-action/
+    - need Podfile.lock, so after expo prebuild
+      - but it does pod install, so that's too late.
 
 * Do GitHub Actions jobs need so many permissions?
 
