--- a/TODO
+++ b/TODO
@@ -3,6 +3,8 @@
     - https://samwize.com/2023/05/24/speed-up-pods-and-gem-install-in-github-action/
     - need Podfile.lock, so after expo prebuild
       - but it does pod install, so that's too late.
+  - xcpretty
+    - and raw logs
 
 * Do GitHub Actions jobs need so many permissions?
 
