--- a/TODO
+++ b/TODO
@@ -1,4 +1,7 @@
 * Run maestro tests on github actions for iOS.
+  - maestro assertion failing
+  - only upload Build/Products/Release-iphonesimulator/expoexperiments.app/
+    - rest of Build/ is huge
   - cache cocoapod files
     - https://samwize.com/2023/05/24/speed-up-pods-and-gem-install-in-github-action/
     - need Podfile.lock, so after expo prebuild
