--- a/TODO
+++ b/TODO
@@ -20,6 +20,10 @@
 
 * iOS screen layout extends into top of screen despite use of SafeAreaView.
 
+* maestro --debug-output could be used to avoid date in log path
+  => can save maestro logs on CI without zipping them?
+    - excluding from or duplicating in a zip with all the files
+
 * A with_environment script for use in checks.yaml.
 
 * Store master-branch apks as GitHub Actions releases.
