--- a/TODO
+++ b/TODO
@@ -70,6 +70,8 @@
   - little point, since downloaded from GitHub release, so as fast as caching files.
 
 * reactivecircus/android-emulator-runner@v2 doesn't version emulator tool or AVD base image
+  - it has an emulator-build parameter for versioning the tool
+    - maintainging build number to use could be awkward
 
 * Test on minSdkVersion=21
   - https://github.com/mobile-dev-inc/maestro/issues/1207 prevented this
