--- a/TODO
+++ b/TODO
@@ -1,28 +1,40 @@
 * Run maestro tests on github actions for iOS.
-  - maestro assertion failing
   - only upload Build/Products/Release-iphonesimulator/expoexperiments.app/
     - rest of Build/ is huge
-  - cache cocoapod files
-    - https://samwize.com/2023/05/24/speed-up-pods-and-gem-install-in-github-action/
-    - need Podfile.lock, so after expo prebuild
-      - but it does pod install, so that's too late.
-  - xcpretty
-    - xcbeautify is maybe better than xcpretty?
-      - https://docs.fastlane.tools/best-practices/xcodebuild-formatters/
-    - is xcpretty available?
-      - would a GemFile be required?
-      - already have https://www.npmjs.com/package/@expo/xcpretty
-        - use this?
-  - nice advice on assigning testID
-    - https://wix.github.io/Detox/docs/guide/test-id/
+
+* cache cocoapod files
+  - https://samwize.com/2023/05/24/speed-up-pods-and-gem-install-in-github-action/
+  - just ~/.cocoapods?
+  - ~/Library/Caches/CocoaPods/Pods too?
+  - can't use Podfile.lock since prebuild creates it and runs pod install
+  - only small part of job time c.f. build...
+
+* xcpretty
+  - xcbeautify is maybe better than xcpretty?
+    - https://docs.fastlane.tools/best-practices/xcodebuild-formatters/
+  - is xcpretty available?
+    - would a GemFile be required?
+    - already have https://www.npmjs.com/package/@expo/xcpretty
+      - use this?
+
+* ios simulator logs
+  - xcrun simctl spawn booted log stream
 
 * Do GitHub Actions jobs need so many permissions?
 
 * Android maestro jobs are flaky
   - emulator stops running part way through some job
-  - get eactivecircus/android-emulator-runner to retry
+  - get eactivecircus/android-emulator-runner to retry?
     - if emulator not running at end of job
     - configurable health commmand, so could get test script to ask for retries too
+    - configurable whether retry only if script fails too
+  - rerun job?
+    - https://api.github.com/repos/OWNER/REPO/actions/jobs/JOB_ID/rerun
+    - https://docs.github.com/en/rest/actions/workflow-runs?apiVersion=2022-11-28#re-run-a-job-from-a-workflow-run
+    - if job can't re-run itself, a dependent job might be able to.
+    - would have to limit number of attempts
+      - https://docs.github.com/en/rest/actions/workflow-runs?apiVersion=2022-11-28#list-workflow-runs-for-a-repository
+  - https://github.com/marketplace/actions/retry-action
 
 * Does android build used for testing need --no-publish etc.?
 
@@ -81,3 +93,6 @@
 
 * Test on minSdkVersion=21
   - https://github.com/mobile-dev-inc/maestro/issues/1207 prevented this
+
+* Remove workaround for assertVisible with text and id
+  - https://github.com/mobile-dev-inc/Maestro/issues/1404
