--- a/TODO
+++ b/TODO
@@ -1,3 +1,5 @@
+* iOS driver not ready in time, consider increasing timeout by configuring MAESTRO_DRIVER_STARTUP_TIMEOUT env variable
+
 * cache cocoapod files
   - ~/.cocoapods and ~/Library/Caches/CocoaPods/Pods
   - can't use Podfile.lock to cache ios/Pods/ since prebuild creates it and runs pod install
@@ -10,20 +12,6 @@
     - would a GemFile be required?
     - already have https://www.npmjs.com/package/@expo/xcpretty
       - use this?
-
-* Android maestro jobs are flaky
-  - emulator stops running part way through some job
-  - get eactivecircus/android-emulator-runner to retry?
-    - if emulator not running at end of job
-    - configurable health commmand, so could get test script to ask for retries too
-    - configurable whether retry only if script fails too
-  - rerun job?
-    - https://api.github.com/repos/OWNER/REPO/actions/jobs/JOB_ID/rerun
-    - https://docs.github.com/en/rest/actions/workflow-runs?apiVersion=2022-11-28#re-run-a-job-from-a-workflow-run
-    - if job can't re-run itself, a dependent job might be able to.
-    - would have to limit number of attempts
-      - https://docs.github.com/en/rest/actions/workflow-runs?apiVersion=2022-11-28#list-workflow-runs-for-a-repository
-  - https://github.com/marketplace/actions/retry-action
 
 * iOS screen layout extends into top of screen despite use of SafeAreaView.
 
