--- a/TODO
+++ b/TODO
@@ -1,6 +1,7 @@
 * Implement a turbo module
   - turbo module needs to go into a node module
     - https://reactnative.dev/docs/the-new-architecture/using-codegen#android explains this indirectly
+  - convert NativeFingerprint.java to kotlin.
 
 * Find a way to share compileSdkVersion and minSdkVersion etc. to turbo_modules/android/fingerprint/build.gradle.kts
   - "by project"?
