--- a/TODO
+++ b/TODO
@@ -1,10 +1,7 @@
 * Implement a turbo module
-  - turbo_modules/fingerprint/example/ eslint failures
   - replace dummy android implementation
-  - update/remove turbo_modules/fingerprint/example/
-  - if can't remove turbo_modules/fingerprint/example/, test it automatically
+  - use different hash algorithm for expo and turbo, so can't mix up in tests.
   - ios implementation.
-  - unit tests
   - end to end tests
 
 * Wait for android emulator to become ready.
