--- a/TODO
+++ b/TODO
@@ -4,6 +4,8 @@
   - ios implementation.
   - end to end tests
 
+* Execute fingerprint algorithms asynchronously (on background thread).
+
 * Wait for android emulator to become ready.
   - https://github.com/jg210/expo-experiments/pull/11#issuecomment-2749418366
 
