--- a/TODO
+++ b/TODO
@@ -11,6 +11,9 @@
   - js string[] becomes List<String> in kotlin, not a ReadableArray
   - nitrogen not run automatically though...
 
+* Crash reporting tool
+  - enabled on CI, so can get more usable iOS crash reports there more easily
+
 * Wait for android emulator to become ready.
   - https://github.com/jg210/expo-experiments/pull/11#issuecomment-2749418366
 
