--- a/TODO
+++ b/TODO
@@ -5,7 +5,7 @@
     - https://stackoverflow.com/a/72053066 for the DSN?
       - convert app.json to app.config.ts
   X increase replaysSessionSampleRate
-  - README
+  X README
   - crash test button
   - enable spotlight in App.tsx?
 
