--- a/TODO
+++ b/TODO
@@ -5,6 +5,8 @@
 * Rename expo native module and turbomodules
   - FingerprintExpo and FingerprintTurbo
 
+* Fail github actions if non-empty git diff at end of jobs.
+
 * Execute fingerprint algorithms asynchronously (on background thread).
 
 * Try out nitro modules
