--- a/TODO
+++ b/TODO
@@ -21,6 +21,11 @@
 * Wait for android emulator to become ready.
   - https://github.com/jg210/expo-experiments/pull/11#issuecomment-2749418366
 
+* Unit tests for native module Promise APIs
+  - currently, just test static helper method
+  - mock ReactApplicationContext
+  - could test threading details
+
 * cache cocoapod files
   - ~/.cocoapods and ~/Library/Caches/CocoaPods/Pods
   - can't use Podfile.lock to cache ios/Pods/ since prebuild creates it and runs pod install
